# tiago_public_ws

./: README.md
src/: .rosinstall  setup.sh
src/elevator_press_button/: CMakeLists.txt  package.xml
src/elevator_press_button/launch/: t  texture_detector_elevator.launch  tiago_navigation_margal.launch  tiago_navigation_public_margal.launch
src/elevator_press_button/scripts-notUsed/: elevator_press_button.py  (+1 more)
src/navigation_margal/: CMakeLists.txt  package.xml
src/navigation_margal/config/after_change/: costmap_common_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/navigation_margal/config/backup/: costmap_common_params.yaml_old  costmap_exploration.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/navigation_margal/config/before_change/: costmap_common_params.yaml
src/navigation_margal/gazebo/: tiago_gazebo_margal.launch  tiago_gazebo_margal_improved.launch
src/navigation_margal/gazebo_worlds_margal/: pal_gazebo_margal_improved.launch
src/navigation_margal/launch/: tiago_mapping_margal.launch  tiago_mapping_public_margal.launch  tiago_navigation_margal.launch  tiago_navigation_public_margal.launch
src/navigation_margal/maps/floor2new/: map.pgm
src/navigation_margal/maps/oldmap/: submap_0.pgm
src/navigation_margal/maps/palmap/: submap_0.pgm
src/navigation_margal/scripts/: map_navigation.py  map_navigationOLD.py  navWithLocal.py  rotate.py
src/navigation_margal/scripts/old/: map_navigationold.py  navWithLocalold.py  rotateold.py
src/navigation_margal/worlds/: elevator_improved.world  improvedbackup.world
(+7 files in other folders)
