<?xml version="1.0"?>
<package format="2">
    <name>navigation_margal</name>
    <version>0.0.0</version>
    <description>The tiago_navigation package with margal config</description>
    
    <maintainer email="margal@margal.net">margal</maintainer>
    
    <url type="website">www.margal.net</url>
    
    <license>MIT-margal</license>  
 
    
    <buildtool_depend>catkin</buildtool_depend>
  
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        
    </export>
</package>
